<?xml version="1.0" encoding="utf-8"?>



<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">





    <TextView
        android:id="@+id/textView11"
        android:layout_width="112dp"
        android:layout_height="34dp"
        android:text="@string/contact_no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.167"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.699" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="112dp"
        android:layout_height="34dp"
        android:text="@string/mayukh_saleel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.686"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="177dp"
        android:layout_height="34dp"
        android:text="@string/mayukhsaleel_gmail_com"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.876"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.651" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="112dp"
        android:layout_height="34dp"
        android:text="@string/_7356588073"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.685"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="112dp"
        android:layout_height="34dp"
        android:text="@string/cse_core"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.686"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.551" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="112dp"
        android:layout_height="34dp"
        android:text="@string/reg_no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.167"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="112dp"
        android:layout_height="34dp"
        android:text="@string/email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.167"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.649" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="112dp"
        android:layout_height="34dp"
        android:text="@string/_20bce2591"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.686"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="112dp"
        android:layout_height="34dp"
        android:text="@string/name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.167"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="112dp"
        android:layout_height="34dp"
        android:text="@string/course"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.167"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.551" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="205dp"
        android:layout_height="303dp"
        android:layout_marginStart="120dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="120dp"
        android:layout_marginRight="120dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="photo"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/a" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">


        <Button
            android:id="@+id/button4"
            android:layout_width="227dp"
            android:layout_height="58dp"
            android:text="Select Date"
            android:translationX="90dp"
            android:translationY="565dp"
            tools:layout_editor_absoluteX="540dp"
            tools:layout_editor_absoluteY="977dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity">

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="83dp"
                android:layout_height="72dp"
                android:background="@android:color/transparent"
                android:contentDescription="gitphoto"
                android:onClick="github"
                android:scaleType="centerInside"
                android:translationX="165dp"
                android:translationY="645dp"
                app:srcCompat="@drawable/_347_github_102542" />

            <Button
                android:id="@+id/button7"
                android:layout_width="205dp"
                android:layout_height="303dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="120dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="120dp"
                android:layout_marginRight="120dp"
                android:layout_marginBottom="320dp"
                android:background="@android:color/transparent"
                app:backgroundTint="@android:color/transparent" />


        </LinearLayout>


    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>